WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205837
[WebAuthn] Report CTAP Client Pin Error to clients
https://bugs.webkit.org/show_bug.cgi?id=205837
Summary
[WebAuthn] Report CTAP Client Pin Error to clients
Jiewen Tan
Reported
2020-01-06 15:35:20 PST
Report CTAP Client Pin Error to clients.
Attachments
Patch
(61.98 KB, patch)
2020-02-06 15:31 PST
,
Jiewen Tan
bfulgham
: review+
Details
Formatted Diff
Diff
Patch for landing
(61.97 KB, patch)
2020-02-07 13:07 PST
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-06 15:35:51 PST
<
rdar://problem/58356872
>
Jiewen Tan
Comment 2
2020-02-06 15:31:01 PST
Created
attachment 390014
[details]
Patch
Brent Fulgham
Comment 3
2020-02-07 12:54:44 PST
Comment on
attachment 390014
[details]
Patch r=me
Brent Fulgham
Comment 4
2020-02-07 12:59:43 PST
Comment on
attachment 390014
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=390014&action=review
> Source/WebKit/ChangeLog:12 > + All error needs to report back to client to show appropriate UI to guide users for the next step.
Maybe, "All errors should be reported to the client so that appropriate UI can be displayed to users."
Jiewen Tan
Comment 5
2020-02-07 13:05:48 PST
Comment on
attachment 390014
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=390014&action=review
Thanks Brent for r+ this patch.
>> Source/WebKit/ChangeLog:12 >> + All error needs to report back to client to show appropriate UI to guide users for the next step. > > Maybe, "All errors should be reported to the client so that appropriate UI can be displayed to users."
Fixed.
Jiewen Tan
Comment 6
2020-02-07 13:07:45 PST
Created
attachment 390117
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2020-02-07 14:16:58 PST
Comment on
attachment 390117
[details]
Patch for landing Clearing flags on attachment: 390117 Committed
r256062
: <
https://trac.webkit.org/changeset/256062
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug